--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
       - run: |
           cp /tmp/workspace/webappdemo .
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t virtualthoughts/circleci-webappdemo:$TAG .
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker push virtualthoughts/circleci-webappdemo:$TAG
+          docker build -t alexandrust88/circleci-webappdemo:$TAG .
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
+          docker push alexandrust88/circleci-webappdemo:$TAG
   GenerateYAML:
     docker:
       - image: cimg/base:2020.06
