--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run : |
           TAG=0.1.$CIRCLE_PREVIOUS_BUILD_NUM
           git clone https://github.com/David-VTUK/CircleCI-Webapp-CI /tmp/CircleCI-Webapp-CI
-          cd /tmp/CircleCI-Webapp-CD
+          cd /tmp/CircleCI-Webapp-CI
           cp /tmp/workspace/deployment.yaml .
           sed -i 's/\(circleci-webappdemo\)\(.*\)/\1:'$TAG'/' ./deployment.yaml
           git config credential.helper 'cache --timeout=120'
