--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,70 +1,70 @@
-version: 2.1. 
-jobs:
-  Test:
-    docker:
-      - image: cimg/go:1.13
-    steps:
-      - checkout
-      - run: go test -v ./...
-  Build:
-    docker:
-      - image: cimg/go:1.13
-    steps:
-      - checkout
-      - run: go get -v -t -d ./...
-      - run: go build -o webappdemo
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./webappdemo
-            - ./deployment.yaml
-  Publish:
-    docker:
-      - image: cimg/go:1.13
-    steps:
-      - checkout
-      - setup_remote_docker
-      - attach_workspace:
-          at: /tmp/workspace
-      - run: |
-          cp /tmp/workspace/webappdemo .
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t alexandrust88/circleci-webappdemo:$TAG .
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
-          docker push alexandrust88/circleci-webappdemo:$TAG
-  GenerateYAML:
-    docker:
-      - image: cimg/base:2020.06
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - run : |
-          TAG=0.1.$CIRCLE_PREVIOUS_BUILD_NUM
-          git clone https://github.com/alexandrust88/CircleCI-Webapp-CI /tmp/CircleCI-Webapp-CI
-          cd /tmp/CircleCI-Webapp-CI
-          cp /tmp/workspace/deployment.yaml .
-          sed -i 's/\(circleci-webappdemo\)\(.*\)/\1:'$TAG'/' ./deployment.yaml
-          git config credential.helper 'cache --timeout=120'
-          git config user.email "CircleCI@virtualthoughts.co.uk"
-          git config user.name "CircleCI"
-          git add .
-          git commit -m "Update via CircleCI"
-          # Push quietly to prevent showing the token in log
-          git branch argocd
-          git checkout argocd
-          git push -q https://$GITHUB_PAT@github.com/alexandrust88/CircleCI-Webapp-CI.git  
+#version: 2.1. 
+# jobs:
+#   Test:
+#     docker:
+#       - image: cimg/go:1.13
+#     steps:
+#       - checkout
+#       - run: go test -v ./...
+#   Build:
+#     docker:
+#       - image: cimg/go:1.13
+#     steps:
+#       - checkout
+#       - run: go get -v -t -d ./...
+#       - run: go build -o webappdemo
+#       - persist_to_workspace:
+#           root: .
+#           paths:
+#             - ./webappdemo
+#             - ./deployment.yaml
+#   Publish:
+#     docker:
+#       - image: cimg/go:1.13
+#     steps:
+#       - checkout
+#       - setup_remote_docker
+#       - attach_workspace:
+#           at: /tmp/workspace
+#       - run: |
+#           cp /tmp/workspace/webappdemo .
+#           TAG=0.1.$CIRCLE_BUILD_NUM
+#           docker build -t alexandrust88/circleci-webappdemo:$TAG .
+#           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
+#           docker push alexandrust88/circleci-webappdemo:$TAG
+#   GenerateYAML:
+#     docker:
+#       - image: cimg/base:2020.06
+#     steps:
+#       - attach_workspace:
+#           at: /tmp/workspace
+#       - run : |
+#           TAG=0.1.$CIRCLE_PREVIOUS_BUILD_NUM
+#           git clone https://github.com/alexandrust88/CircleCI-Webapp-CI /tmp/CircleCI-Webapp-CI
+#           cd /tmp/CircleCI-Webapp-CI
+#           cp /tmp/workspace/deployment.yaml .
+#           sed -i 's/\(circleci-webappdemo\)\(.*\)/\1:'$TAG'/' ./deployment.yaml
+#           git config credential.helper 'cache --timeout=120'
+#           git config user.email "CircleCI@virtualthoughts.co.uk"
+#           git config user.name "CircleCI"
+#           git add .
+#           git commit -m "Update via CircleCI"
+#           # Push quietly to prevent showing the token in log
+#           git branch argocd
+#           git checkout argocd
+#           git push -q https://$GITHUB_PAT@github.com/alexandrust88/CircleCI-Webapp-CI.git  
 
-workflows:
-  version: 2
-  Test-Build-Publish:
-    jobs:
-      - Test
-      - Build:
-          requires:
-            - Test
-      - Publish:
-          requires:
-            - Build
-      - GenerateYAML:
-          requires:
-            - Publish     
+# workflows:
+#   version: 2
+#   Test-Build-Publish:
+#     jobs:
+#       - Test
+#       - Build:
+#           requires:
+#             - Test
+#       - Publish:
+#           requires:
+#             - Build
+#       - GenerateYAML:
+#           requires:
+#             - Publish     
